# pydynantic

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  conftest.py  test_marshalling_bench.py  test_query_bench.py
concepts/single-table-design/: index.html
docs/: index.md  policies.md  recipes.md
docs/concepts/: single-table-design.md
docs/guide/: batch.md  collections.md  crud.md  entities-and-keys.md  filters-and-conditions.md  marshalling.md  optimistic-locking.md  pagination.md  queries.md  transactions.md  ttl-and-timestamps.md
docs/migrating/: from-dynamodb-toolbox.md  from-electrodb.md
docs/reference/: api.md
examples/: README.md  saas_app.py
guide/batch/: index.html
guide/collections/: index.html
guide/crud/: index.html
guide/entities-and-keys/: index.html
guide/filters-and-conditions/: index.html
guide/marshalling/: index.html
guide/optimistic-locking/: index.html
guide/pagination/: index.html
guide/queries/: index.html
guide/transactions/: index.html
guide/ttl-and-timestamps/: index.html
migrating/from-dynamodb-toolbox/: index.html
migrating/from-electrodb/: index.html
policies/: index.html
recipes/: index.html
reference/api/: index.html
search/: search_index.json
src/pydynantic/: __init__.py  attributes.py  batch.py  collections.py  entity.py  errors.py  expressions.py  keys.py  marshalling.py  observability.py  pagination.py  query.py  table.py  transactions.py
tests/: conftest.py  test_batch.py  test_collections.py  test_crud.py  test_entity_definition.py  test_expressions.py  test_expressions_fuzz.py  test_integration.py  test_keys.py  test_keys_property.py  test_marshalling.py  test_marshalling_property.py  test_observability.py  test_pagination.py  test_query.py  test_table.py  test_timestamps.py  test_transactions.py  test_ttl.py  test_versioning.py
