[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydynantic"
version = "0.2.0"
description = "Single-table design for DynamoDB in Python, with typed entities on top of Pydantic v2."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Robert Ruben" }]
keywords = ["dynamodb", "single-table", "pydantic", "aws", "boto3", "orm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "boto3>=1.26",
    "pydantic>=2.0",
    "typing-extensions>=4.6",
]

[project.optional-dependencies]
dev = [
    "moto[dynamodb]>=5.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "boto3-stubs[dynamodb]",
]

[project.urls]
Homepage = "https://github.com/robertruben98/pydynantic"
Repository = "https://github.com/robertruben98/pydynantic"

[tool.hatch.build.targets.wheel]
packages = ["src/pydynantic"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = ["B008", "SIM105"]

[tool.ruff.lint.per-file-ignores]
# Nested ``with pytest.raises(...): with transaction(...)`` is clearer than a
# combined statement when asserting that a block rolls back.
"tests/**" = ["SIM117"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/pydynantic"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests against DynamoDB Local (deselected by default)",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["pydynantic"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
